<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CRIMP</string>
    <string name="package_name">com.nusclimb.live.crimp</string>
    
    <!-- Activity UI Components -->
    <string name="UI_username">Route Judge Name</string>
    <string name="UI_next">Next</string>
    <string name="UI_climber_id">Climber ID</string>
    <string name="UI_climber_name">Climber name</string>
    <string name="UI_climber_id_heading">Climber ID: </string>
    <string name="UI_climber_name_heading">Climber name: </string>
    <string name="UI_total_score_heading">Total score:</string>
    <string name="UI_rescan">Rescan</string>
    <string name="UI_loading">&lt;loading&gt;</string>
    <string name="UI_unavailable">&lt;unavailable&gt;</string>
    <string name="UI_current_score">Current Session Score</string>
    <string name="UI_plus_one">+1</string>
    <string name="UI_b">Bonus</string>
    <string name="UI_t">Top</string>
    <string name="UI_backspace">Backspace</string>
    <string name="UI_submit">Submit</string>
    <string name="UI_flash">Flash</string>
    <string name="UI_climber">Climber: </string>
    <string name="UI_route">Route: </string>
    <string name="UI_status">Status: </string>
    <string name="UI_pause">Resume uploads</string>
    <string name="UI_no_pending_uploads">No pending uploads</string>
    <string name="UI_pending_uploads">CRIMP pending uploads</string>
    <string name="UI_cancel_task">Cancel task</string>
    <string name="UI_save">Save</string>
    <string name="UI_dl_url">D/L URL</string>
    <string name="UI_ul_url">U/L URL</string>
    <string name="UI_j_name">j_name</string>
    <string name="UI_auth_code">auth_code</string>
    <string name="UI_c_id">c_id</string>
    <string name="UI_r_id">r_id</string>
    <string name="UI_score_append">Score to append</string>
    <string name="UI_server_password">Server password</string>
    <string name="UI_server_password_summary">Authentication code to upload score to server.</string>
    
    <!-- Dialog -->
    <string name="dialog_cancel_task">Cancel task</string>
    <string name="dialog_no_cancel_task">Don\'t cancel task</string>
    <string name="dialog_save">Save changes</string>
    <string name="dialog_no_save">Don\'t save changes</string>
    <string name="dialog_submit">Submit</string>
    <string name="dialog_no_submit">Don\'t submit</string>
    <string name="dialog_back">Back</string>
    <string name="dialog_no_back">Cancel</string>
    
    <!-- Intent Key -->
    <string name="intent_username">.username</string>
    <string name="intent_round">.round</string>
    <string name="intent_route">.route</string>
    <string name="intent_climber_id">.climber_id</string>
    <string name="intent_climber_name">.climber_name</string>
    <string name="intent_dl_url">.downloadUrl</string>
    <string name="intent_ul_url">.uploadUrl</string>
    <string name="intent_j_name">.jName</string>
    <string name="intent_auth_code">.authCode</string>
    <string name="intent_r_id">.rId</string>
    <string name="intent_c_id">.cId</string>
    <string name="intent_score_append">.appendScore</string>
    
    <!-- Persistent Storage Keys -->
    <string name="store_queue_count">queue_count</string>
    <string name="store_upload_task">upload_task</string>
    
    <!-- Network -->
    <string name="net_password">rustamGELMANOV</string>
    <string name="net_password_debug">crimpAUTH</string>
    <string name="net_base_url">http://crimp-stage.herokuapp.com</string>
    <string name="net_download_url">/judge/get/</string>
    
    <!-- QR Code prefix -->
    <string name="qr_prefix">&lt;BA2014&gt;</string>
    
    <!-- Menu -->
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    
    <!-- Broadcast -->
    <string name="broadcast_crimp_msg">crimp_msg</string>
    <string name="broadcast_msg_type">broadcast_msg_type</string>
    
    <string name="receiver_action">com.nusclimb.live.crimp.receiver_action</string>

</resources>
