<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:id="@+id/scoring_root">
    
    <TableLayout android:id="@+id/scoring_climber_info" 
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:stretchColumns="1"
	    android:shrinkColumns="1" >
	    
        <TableRow >
            
            <TextView 
			    android:id="@+id/scoring_climber_id_text"
			    android:text="@string/UI_climber_id_heading" />
    
		    <EditText 
	            android:id="@+id/scoring_climber_id_edit"
	        	android:clickable="false" 
		        android:cursorVisible="false" 
		        android:focusable="false" 
		        android:focusableInTouchMode="false" />
	            
        </TableRow>
        
        <TableRow >
            
        	<TextView 
				android:id="@+id/scoring_climber_name_text"
			    android:text="@string/UI_climber_name_heading" />
    
    		<EditText 
	            android:id="@+id/scoring_climber_name_edit"
	            android:layout_height="wrap_content"
	        	android:clickable="false" 
		        android:cursorVisible="false" 
		        android:focusable="false" 
		        android:focusableInTouchMode="false" />
            
        </TableRow>
        
    </TableLayout>
    
    <View
        android:id="@+id/scoring_divider"
    	android:layout_width="fill_parent"
    	android:layout_height="1dp"
    	android:layout_marginTop="8dp"
    	android:layout_marginBottom="8dp"
    	android:background="@android:color/darker_gray"
    	android:layout_below="@id/scoring_climber_info" />
    
    <TextView 
	    android:id="@+id/scoring_old_score_text"
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
	    android:text="@string/UI_total_score_heading"
	    android:layout_below="@id/scoring_divider" />
    
    <EditText 
		android:id="@+id/scoring_score_history_edit"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:clickable="false" 
		android:cursorVisible="false" 
		android:focusable="false" 
		android:focusableInTouchMode="false" 
		android:layout_below="@id/scoring_old_score_text" />
    
    <EditText 
		android:id="@+id/scoring_score_current_edit"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/UI_current_score"
		android:clickable="false" 
		android:cursorVisible="false" 
		android:focusable="false" 
		android:focusableInTouchMode="false"
		android:layout_below="@id/scoring_score_history_edit" />
    
    <LinearLayout android:id="@+id/scoring_button_row" 
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/scoring_score_current_edit"
	    android:orientation="horizontal" >
        
        <Button 
        	android:id="@+id/scoring_plus_one_button"
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"
        	android:text="@string/UI_plus_one" 
        	android:onClick="plusOne" />
        
        <Button 
        	android:id="@+id/scoring_b_button"
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"
        	android:text="@string/UI_b" 
        	android:onClick="bonus" />
        
        <Button 
        	android:id="@+id/scoring_t_button"
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"
        	android:text="@string/UI_t" 
        	android:onClick="top" />
        
        <Button 
        	android:id="@+id/scoring_backspace_button"
        	android:layout_width="0dp" 
        	android:layout_height="wrap_content"
        	android:layout_weight="1" 
        	android:text="@string/UI_backspace"
        	android:onClick="backspace" />
        
    </LinearLayout>
    
    <Button
        android:id="@+id/scoring_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@id/scoring_button_row"
        android:onClick="submit"
        android:text="@string/UI_submit" />
    
</RelativeLayout>
